--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+Content/InfinityBladeFireLands/Maps/Forge.umap
+Content/InfinityBladeIceLands/Maps/FrozenCove.umap
