--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=OriginalGame2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Stage_2.Stage_2
-GameDefaultMap=/Game/Maps/Stage_2.Stage_2
+EditorStartupMap=/Game/InfinityBladeGrassLands/Maps/ElvenRuins.ElvenRuins
+GameDefaultMap=/Game/InfinityBladeGrassLands/Maps/ElvenRuins.ElvenRuins
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
