--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=OriginalGame2
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/InfinityBladeGrassLands/Maps/ElvenRuins.ElvenRuins
-GameDefaultMap=/Game/InfinityBladeGrassLands/Maps/ElvenRuins.ElvenRuins
+GameDefaultMap=/Game/Maps/Title.Title
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
